[tool.poetry]
name = "portfolio"
version = "0.3.0"
description = "Getting Started Testing: pytest edition"
authors = ["Brendon Smith <br3ndonland@protonmail.com>"]
license = "MIT"
homepage = "https://github.com/br3ndonland/test3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
coverage = "*"
flake8 = "*"
mock = "*"
mypy = "*"
pre-commit = "^2.1"
pytest = "^4.6"
pytest-mock = "*"
requests = "*"
importlib-metadata = "^1.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
