[tool.poetry]
name = "portfolio"
version = "0.3.0"
description = "Getting Started Testing: pytest edition"
authors = ["Brendon Smith <br3ndonland@protonmail.com>"]
license = "MIT"
homepage = "https://github.com/br3ndonland/test3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
coverage = "*"
flake8 = "*"
mock = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-mock = "*"
requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
